<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/BtnJouer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/jouer" />

    <Button
        android:id="@+id/BtnGererJoueur"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BtnJouer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/BtnGererJoueur" />

    <Button
        android:id="@+id/BtnGererComposition"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/BtnGererJoueur"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/BtnGererComposition" />

    <Button
        android:id="@+id/BtnDeconnexion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/BtnGererComposition"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/deconnexion" />
</RelativeLayout>