<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/imgCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/jojo"/>

    <EditText
        android:id="@+id/pseudonymeCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/imgCreateAccount"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:maxLength="15"
        android:hint="@string/pseudonymeCreateAccount"/>

    <EditText
        android:id="@+id/lastnameCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/pseudonymeCreateAccount"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:maxLength="15"
        android:hint="@string/lastnameCreateAccount"/>

    <EditText
        android:id="@+id/nameCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/lastnameCreateAccount"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:maxLength="15"
        android:hint="@string/nameCreateAccount"/>

    <EditText
        android:id="@+id/passwordCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/nameCreateAccount"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:singleLine="true"
        android:maxLength="15"
        android:hint="@string/passwordCreateAccount"/>

    <EditText
        android:id="@+id/confirmationPasswordCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/passwordCreateAccount"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:singleLine="true"
        android:maxLength="15"
        android:hint="@string/confirmationPasswordCreateAccount"/>


    <Button
        android:id="@+id/BtnCreerCompte"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmationPasswordCreateAccount"
        android:layout_centerHorizontal="true"
        android:text="@string/BtnGoInscription"/>

    <Button
        android:id="@+id/BtnRetour"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/BtnCreerCompte"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/BtnRetour"/>

</RelativeLayout>