<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/imgCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/jojo" />

    <EditText
        android:id="@+id/pseudonymeLogin"
        android:inputType="textNoSuggestions"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/imgCreateAccount"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:maxLength="15"
        android:singleLine="true"
        android:textColor="@color/black"
        android:hint="@string/loginPseudonyme"/>

    <EditText
        android:id="@+id/motDePasseLogin"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/pseudonymeLogin"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:maxLength="15"
        android:singleLine="true"
        android:textColor="@color/black"
        android:hint="@string/loginMotDePasse"/>

    <Button
        android:id="@+id/BtnSeConnecter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/motDePasseLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/BtnSeConnecter" />

    <Button
        android:id="@+id/BtnGoInscription"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/BtnSeConnecter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/BtnGoInscription" />

    <ProgressBar
        android:id="@+id/progressBarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/BtnGoInscription"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/imgKonoDioDa"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/original"/>
</RelativeLayout>
